--- a/catalog.html
+++ b/catalog.html
@@ -98,8 +98,8 @@
                             </div>
                             <a href="" class="item-product__image _ibg">
                                 <picture>
-                                    <source srcset="img/products/01.webp" type="image/webp"><img
-                                        src="img/products/01.jpg" alt="Moonkin Hatchling">
+                                    <source srcset="img/cover/rozchinna-kava-2.webp" type="image/webp"><img
+                                        src="img/cover/rozchinna-kava-2.jpg" alt="Moonkin Hatchling">
                                 </picture>
                             </a>
                             <div class="item-product__body">
@@ -118,8 +118,8 @@
                             </div>
                             <a href="" class="item-product__image _ibg">
                                 <picture>
-                                    <source srcset="img/products/02.webp" type="image/webp"><img
-                                        src="img/products/02.jpg" alt="Кава розчинна Якобс Велюр 1 кг">
+                                    <source srcset="img/cover/karamel.webp" type="image/webp"><img
+                                        src="img/cover/karamel.jpg" alt="Кава розчинна Якобс Велюр 1 кг">
                                 </picture>
                             </a>
                             <div class="item-product__body">
@@ -137,8 +137,8 @@
                         <article data-pid="3" class="products__item item-product">
                             <a href="" class="item-product__image _ibg">
                                 <picture>
-                                    <source srcset="img/products/03.webp" type="image/webp"><img
-                                        src="img/products/03.jpg" alt="Kul Tiran Druid">
+                                    <source srcset="img/cover/zernova-kava.webp" type="image/webp"><img
+                                        src="img/cover/zernova-kava.png" alt="Kul Tiran Druid">
                                 </picture>
                             </a>
                             <div class="item-product__body">
@@ -157,8 +157,8 @@
                             <div class="item-product__labels"></div>
                             <a href="" class="item-product__image _ibg">
                                 <picture>
-                                    <source srcset="img/products/04.webp" type="image/webp"><img
-                                        src="img/products/04.jpg" alt="Lolito">
+                                    <source srcset="img/cover/molota-kava.webp" type="image/webp"><img
+                                        src="img/cover/molota-kava.jpg" alt="Lolito">
                                 </picture>
                             </a>
                             <div class="item-product__body">
@@ -176,7 +176,7 @@
                             <div class="item-product__labels"></div>
                             <a href="" class="item-product__image _ibg">
                                 <picture>
-                                    <source srcset="img/products/04.webp" type="image/webp"><img src="img/products/04.jpg" alt="Lolito">
+                                    <source srcset="img/cover/black-tea.webp" type="image/webp"><img src="img/cover/black-tea.jpg" alt="Lolito">
                                 </picture>
                             </a>
                             <div class="item-product__body">
@@ -194,7 +194,7 @@
                             <div class="item-product__labels"></div>
                             <a href="" class="item-product__image _ibg">
                                 <picture>
-                                    <source srcset="img/products/04.webp" type="image/webp"><img src="img/products/04.jpg" alt="Lolito">
+                                    <source srcset="img/cover/zeleniy-chai.webp" type="image/webp"><img src="img/cover/zeleniy-chai.jpg" alt="Lolito">
                                 </picture>
                             </a>
                             <div class="item-product__body">
@@ -212,7 +212,7 @@
                             <div class="item-product__labels"></div>
                             <a href="" class="item-product__image _ibg">
                                 <picture>
-                                    <source srcset="img/products/04.webp" type="image/webp"><img src="img/products/04.jpg" alt="Lolito">
+                                    <source srcset="img/cover/Travyanoy-chay.webp" type="image/webp"><img src="img/cover/Travyanoy-chay.jpg" alt="Lolito">
                                 </picture>
                             </a>
                             <div class="item-product__body">
