--- a/catalog.html
+++ b/catalog.html
@@ -226,6 +226,25 @@
                                 
                             </div>
                         </article>
+                        <article data-pid="7" class="products__item item-product">
+                            <div class="item-product__labels"></div>
+                            <a href="" class="item-product__image _ibg">
+                                <picture>
+                                    <source srcset="img/cover/solodoshi.webp" type="image/webp"><img src="img/cover/solodoshi.jpg"
+                                        alt="Lolito">
+                                </picture>
+                            </a>
+                            <div class="item-product__body">
+                                <div class="item-product__content">
+                                    <h3 class="item-product__title">Солодощі</h3>
+                                    <div class="item-product__text">Оптом і в роздріб</div>
+                                </div>
+                                <div class="item-product__prices">
+                                    <div class="item-product__price">Від 80 грн/кг</div>
+                                </div>
+                        
+                            </div>
+                        </article>
                     </div>
                 </div>
             </section>
