--- a/index.html
+++ b/index.html
@@ -314,8 +314,8 @@
                                         <source srcset="img/tips/02.webp" type="image/webp"><img src="img/tips/02.jpg" alt="postcard care"></picture>
                                 </a>
                                 <div class="slider-tips__content">
-                                    <a href="" class="slider-tips__title">Щось смачн</a>
-                                    <div class="slider-tips__text">в наявності</div>
+                                    <a href="" class="slider-tips__title">Арахісова паста 1 кг</a>
+                                    <div class="slider-tips__text">Немає в наявності</div>
                                 </div>
                             </div>
                             <div class="slider-tips__slide">
@@ -324,7 +324,7 @@
                                         <source srcset="img/tips/03.webp" type="image/webp"><img src="img/tips/03.jpg" alt="sculpture care"></picture>
                                 </a>
                                 <div class="slider-tips__content">
-                                    <a href="" class="slider-tips__title">щось смачне</a>
+                                    <a href="" class="slider-tips__title">Какао Quick Cao 500 г Польща</a>
                                     <div class="slider-tips__text">В наявності</div>
                                 </div>
                             </div>
