--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
                                             <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
                                             <ul class="menu__sub-list">
                                                 <li class="menu__sub-item">
-                                                    <a href="" class="menu__sub-link">Чай чорний</a>
+                                                    <a href="black-tea.html" class="menu__sub-link">Чай чорний</a>
                                                 </li>
                                                 <li class="menu__sub-item">
                                                     <a href="" class="menu__sub-link">Чай чорний з добавками</a>
                                                 </li>
                                                 <li class="menu__sub-item">
-                                                    <a href="" class="menu__sub-link">Чай зелений</a>
+                                                    <a href="green-tea.html" class="menu__sub-link">Чай зелений</a>
                                                 </li>
                                                 <li class="menu__sub-item">
                                                     <a href="" class="menu__sub-link">Чай зелений з добавками</a>
@@ -121,7 +121,7 @@
                                         <picture>
                                             <source srcset="img/main-slider/02.webp" type="image/webp"><img src="img/main-slider/02.jpg" alt="Картинка слайда"></picture>
                                     </div>
-                                    <a href="" data-swiper-parallax-opacity="0" data-swiper-parallax-x="-100%" class="slider-main__content">
+                                    <a href="black-tea.html" data-swiper-parallax-opacity="0" data-swiper-parallax-x="-100%" class="slider-main__content">
                                         <div class="slider-main__title">Чай</div>
                                         <div class="slider-main__text">Чорний, зелений, трав'яний</div>
                                         <div class="slider-main__price _icon-arrow-link">Від 139 грн</div>
@@ -367,8 +367,8 @@
                         <div class="menu-footer__column">
                             <button type="button" data-spoller class="menu-footer__title _footer-title">Чай</button>
                             <ul class="menu-footer__list">
-                                <li><a href="" class="menu-footer__link">Чорний чай</a></li>
-                                <li><a href="" class="menu-footer__link">Зелений чай</a></li>
+                                <li><a href="black-tea.html" class="menu-footer__link">Чорний чай</a></li>
+                                <li><a href="green-tea.html" class="menu-footer__link">Зелений чай</a></li>
                                 <li><a href="" class="menu-footer__link">трав'яний чай</a></li>
                                 <li><a href="" class="menu-footer__link">-</a></li>
                             </ul>
