Adding section pages

--- a/black-tea-plus.html
+++ b/black-tea-plus.html
@@ -56,7 +56,7 @@
                                                 class="menu__arrow _icon-arrow-down"></button>
                                             <ul class="menu__sub-list">
                                                 <li class="menu__sub-item">
-                                                    <a href="" class="menu__sub-link">Чай чорний</a>
+                                                    <a href="black-tea.html" class="menu__sub-link">Чай чорний</a>
                                                 </li>
                                                 <li class="menu__sub-item">
                                                     <a href="black-tea-plus.html" class="menu__sub-link">Чай чорний з добавками</a>
@@ -228,7 +228,7 @@
                         <div class="menu-footer__column">
                             <button type="button" data-spoller class="menu-footer__title _footer-title">Чай</button>
                             <ul class="menu-footer__list">
-                                <li><a href="" class="menu-footer__link">Чорний чай</a></li>
+                                <li><a href="black-tea.html" class="menu-footer__link">Чорний чай</a></li>
                                 <li><a href="green-tea.html" class="menu-footer__link">Зелений чай</a></li>
                                 <li><a href="" class="menu-footer__link">трав'яний чай</a></li>
                                 <li><a href="" class="menu-footer__link">-</a></li>
