--- a/green-tea-plus.html
+++ b/green-tea-plus.html
@@ -59,7 +59,7 @@
                                                     <a href="" class="menu__sub-link">Чай чорний</a>
                                                 </li>
                                                 <li class="menu__sub-item">
-                                                    <a href="black-tea-plus.html" class="menu__sub-link">Чай чорний з добавками</a>
+                                                    <a href="" class="menu__sub-link">Чай чорний з добавками</a>
                                                 </li>
                                                 <li class="menu__sub-item">
                                                     <a href="green-tea.html" class="menu__sub-link">Чай зелений</a>
