--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 <source srcset="img/advantages/04.svg" type="image/webp"><img src="img/advantages/04.svg" alt="24 / 7 Support"></picture>
                         </div>
                         <h3 class="advantages__title">Підтримка</h3>
-                        <div class="advantages__text">Менеджер допоможи в вирішені питань</div>
+                        <div class="advantages__text">Менеджери допоможуть в вирішені питань</div>
                     </div>
                 </div>
             </section>
@@ -221,9 +221,9 @@
                                 </div>
                                 <div class="item-product__actions actions-product">
                                     <div class="actions-product__body">
-                                        <a href="" class="actions-product__button btn btn_white">Замовити</a>
-                                        <a href="" class="actions-product__link _icon-share">Share</a>
-                                        <a href="" class="actions-product__link _icon-favorite">Like</a>
+                                        <a href="" class="actions-product__button btn btn_white">До кошика</a>
+                                        <a href="" class="actions-product__link _icon-share">Поширити</a>
+                                        <a href="" class="actions-product__link _icon-favorite">Вподобання</a>
                                     </div>
                                 </div>
                             </div>
@@ -246,9 +246,9 @@
                                 </div>
                                 <div class="item-product__actions actions-product">
                                     <div class="actions-product__body">
-                                        <a href="" class="actions-product__button btn btn_white">Замовити</a>
-                                        <a href="" class="actions-product__link _icon-share">Share</a>
-                                        <a href="" class="actions-product__link _icon-favorite">Like</a>
+                                        <a href="" class="actions-product__button btn btn_white">До кошика</a>
+                                        <a href="" class="actions-product__link _icon-share">Поширити</a>
+                                        <a href="" class="actions-product__link _icon-favorite">Вподобання</a>
                                     </div>
                                 </div>
                             </div>
@@ -272,9 +272,9 @@
                                 </div>
                                 <div class="item-product__actions actions-product">
                                     <div class="actions-product__body">
-                                        <a href="" class="actions-product__button btn btn_white">Замовити</a>
-                                        <a href="" class="actions-product__link _icon-share">Share</a>
-                                        <a href="" class="actions-product__link _icon-favorite">Like</a>
+                                        <a href="" class="actions-product__button btn btn_white">До кошика</a>
+                                        <a href="" class="actions-product__link _icon-share">Поширити</a>
+                                        <a href="" class="actions-product__link _icon-favorite">Вподобання</a>
                                     </div>
                                 </div>
                             </div>
@@ -295,9 +295,9 @@
                                 </div>
                                 <div class="item-product__actions actions-product">
                                     <div class="actions-product__body">
-                                        <a href="" class="actions-product__button btn btn_white">Замовити</a>
-                                        <a href="" class="actions-product__link _icon-share">Share</a>
-                                        <a href="" class="actions-product__link _icon-favorite">Like</a>
+                                        <a href="" class="actions-product__button btn btn_white">До кошика</a>
+                                        <a href="" class="actions-product__link _icon-share">Поширити</a>
+                                        <a href="" class="actions-product__link _icon-favorite">Вподобання</a>
                                     </div>
                                 </div>
                             </div>
