--- a/green-tea.html
+++ b/green-tea.html
@@ -26,7 +26,7 @@
                                 <nav class="menu__body">
                                     <ul data-spollers="768,max" class="menu__list">
                                         <li class="menu__item">
-                                            <a href="" class="menu__link">Кава</a>
+                                            <a href="" class="menu__link">Чай зелений</a>
                                             <button data-spoller type="button"
                                                 class="menu__arrow _icon-arrow-down"></button>
                                             <ul class="menu__sub-list">
