--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="ua">
 
 <head>
     <title>Territoria Coffee</title>
@@ -26,32 +26,31 @@
                                 <nav class="menu__body">
                                     <ul data-spollers="768,max" class="menu__list">
                                         <li class="menu__item">
-                                            <a href="" class="menu__link">Кава</a>
-                                            <button data-spoller type="button"
-                                                class="menu__arrow _icon-arrow-down"></button>
+                                            <a href="coffee.html" class="menu__link">Кава</a>
+                                            <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
                                             <ul class="menu__sub-list">
                                                 <li class="menu__sub-item">
                                                     <a href="" class="menu__sub-link">ОПТ кави</a>
                                                 </li>
                                                 <li class="menu__sub-item">
-                                                    <a href="" class="menu__sub-link">Зернова кава</a>
+                                                    <a href="coffee-beans.html" class="menu__sub-link">Зернова кава</a>
                                                 </li>
                                                 <li class="menu__sub-item">
-                                                    <a href="" class="menu__sub-link">Кава мелена</a>
+                                                    <a href="coffee-ground.html" class="menu__sub-link">Кава мелена</a>
                                                 </li>
                                                 <li class="menu__sub-item">
-                                                    <a href="" class="menu__sub-link">Ароматизована зернова кава</a>
+                                                    <a href="coffee-beans-plus.html" class="menu__sub-link">Ароматизована зернова кава</a>
                                                 </li>
                                                 <li class="menu__sub-item">
-                                                    <a href="" class="menu__sub-link">Кава розчинна</a>
+                                                    <a href="coffee-instant.html" class="menu__sub-link">Кава розчинна</a>
                                                 </li>
                                                 <li class="menu__sub-item">
-                                                    <a href="" class="menu__sub-link">Ароматизована розчинна кава</a>
+                                                    <a href="coffee-instant-plus.html" class="menu__sub-link">Ароматизована розчинна кава</a>
                                                 </li>
                                             </ul>
                                         </li>
                                         <li class="menu__item">
-                                            <a href="" class="menu__link">Чай</a>
+                                            <a href="tea.html" class="menu__link">Чай</a>
                                             <button data-spoller type="button"
                                                 class="menu__arrow _icon-arrow-down"></button>
                                             <ul class="menu__sub-list">
