--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             <div class="header__wrapper">
                 <div class="header__container _container">
                     <div class="header__body">
-                        <div class="header__logo">
-                            <img src="img/logo/logo.png" alt="Territoria Coffee" >
-                        </div>
+                        <a href="index.html" class="header__logo">
+                            <img src="img/logo/Logo.webp" alt="Логотип">
+                          </a>
                         <div class="header__main">                           
                             <div class="header__menu menu">
                                 <nav class="menu__body">
@@ -94,6 +94,27 @@
                                 </nav>
                             </div>
                         </div>
+                        <div class="header__search">
+                            <div class="search-form">
+                                <button type="button" class="search-form__icon _icon-search"></button>
+                                <form action="#" class="search-form__item">
+                                    <button type="submit" class="search-form__btn _icon-search"></button>
+                                    <input autocomplete="off" type="text" name="form[]" data-value="Пошук" class="search-form__input">
+                                </form>
+                            </div>
+                        </div>
+                        <div class="header__actions actions-header">
+                            <a href="" class="actions-header__item actions-header__item_favorites _icon-favorite"></a>
+                            <div class="actions-header__item cart-header">
+                                <a href="" class="cart-header__icon _icon-cart"></a>
+                                <div class="cart-header__body">
+                                    <ul class="cart-header__list cart-list"></ul>
+                                </div>
+                            </div>
+                            <a href="" class="actions-header__item actions-header__item_user _ibg">
+                                <picture>
+                                    <source srcset="img/avatar.webp" type="image/webp"><img src="img/avatar.jpg" alt="Avatar"></picture>
+                            </a>
                         
                         <button type="button" class="icon-menu">
 					<span></span>
