--- a/catalog.html
+++ b/catalog.html
@@ -19,7 +19,7 @@
                 <div class="header__container _container">
                     <div class="header__body">
                         <a href="index.html" class="header__logo">
-                            <img src="img/logo/Logo.webp" alt="Логотип">
+                            <img src="img/logo/Logo.png" alt="Логотип">
                           </a>
                         <div class="header__main">                           
                             <div class="header__menu menu">
