--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                                             <button data-spoller type="button" class="menu__arrow _icon-arrow-down"></button>
                                             <ul class="menu__sub-list">
                                                 <li class="menu__sub-item">
-                                                    <a href="tel:+62894563455" class="contacts-footer__item _icon-phone">+380 (95) 493-44-16</a>
+                                                    <a href="tel:+62894563455" class="contacts-footer__item _icon-phone">+380(95)493-44-16</a>
                                                 </li>
                                                 <li class="menu__sub-item">
                                                     <a href="tel:+62894563455" class="contacts-footer__item _icon-phone">
-                                                        +380 (67) 493-44-19</a>
+                                                        +380(67)493-44-19</a>
                                                 </li>
                                                 
                                                 
@@ -387,8 +387,8 @@
                         <div class="footer__text">Територія Твоєї кави</div>
                         <div class="footer__contacts contacts-footer">
                             <a href="https://goo.gl/maps/nc1YKYQ8QbA2v2zD7" class="contacts-footer__item _icon-location">Україна, Дніпро, Космодромна 4 </a>
-                            <a href="tel:+62894563455" class="contacts-footer__item _icon-phone">+380 (95) 493-44-16</a>
-                            <a href="tel:+62894563455" class="contacts-footer__item _icon-phone">
+                            <a href="tel:+380 (95) 493-44-16" class="contacts-footer__item _icon-phone">+380 (95) 493-44-16</a>
+                            <a href="+380 (67) 493-44-19" class="contacts-footer__item _icon-phone">
                                 +380 (67) 493-44-19</a>
                             <a href="https://www.panterius.com" target="_blank" class="contacts-footer__item">www.territoriacoffee.com.ua</a>
                         </div>
