--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
 
 <head>
     <title>Territoria Coffee</title>
@@ -123,6 +123,7 @@
                         </button>
                     </div>
                 </div>
+             </div>
             </div>
         </header>
         <main class="page">
@@ -148,7 +149,7 @@
                                 <div class="slider-main__slide">
                                     <div class="slider-main__image _ibg">
                                         <picture>
-                                            <source srcset="img/main-slider/01.webp" type="image/webp"><img src="img/main-slider/01.jpg" alt="Image"></picture>
+                                            <source srcset="img/main-slider/01.jpg" type="image/webp"><img src="img/main-slider/01.jpg" alt="Image"></picture>
                                     </div>
                                     <a href="" data-swiper-parallax-opacity="0" data-swiper-parallax-x="-100%" class="slider-main__content">
                                         <div class="slider-main__title">Кава</div>
@@ -387,8 +388,8 @@
                         <div class="footer__text">Територія Твоєї кави</div>
                         <div class="footer__contacts contacts-footer">
                             <a href="https://goo.gl/maps/nc1YKYQ8QbA2v2zD7" class="contacts-footer__item _icon-location">Україна, Дніпро, Космодромна 4 </a>
-                            <a href="tel:+380 (95) 493-44-16" class="contacts-footer__item _icon-phone">+380 (95) 493-44-16</a>
-                            <a href="+380 (67) 493-44-19" class="contacts-footer__item _icon-phone">
+                            <a href="tel+380(95)493-44-16" class="contacts-footer__item _icon-phone">+380 (95) 493-44-16</a>
+                            <a href="+380(67)493-44-19" class="contacts-footer__item _icon-phone">
                                 +380 (67) 493-44-19</a>
                             <a href="https://www.panterius.com" target="_blank" class="contacts-footer__item">www.territoriacoffee.com.ua</a>
                         </div>
