debug + mobile menu btn

--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
 
 <head>
     <title>Territoria Coffee</title>
@@ -116,11 +116,12 @@
                                     <source srcset="img/avatar.webp" type="image/webp"><img src="img/avatar.jpg" alt="Avatar"></picture>
                             </a>
                         
-                        <button type="button" class="icon-menu">
-					<span></span>
-					<span></span>
-					<span></span>
-				</button>
+                            <button type="button" class="icon-menu">
+                                <span></span>
+                                <span></span>
+                                <span></span>
+                            </button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -148,7 +149,7 @@
                                 <div class="item-product__prices">
                                     <div class="item-product__price">Від 197 грн/кг</div>
                                 </div>
-                                
+                            </div>  
                         </article>
                         <article data-pid="2" class="products__item item-product">
                             <div class="item-product__labels">
