--- a/black-tea.html
+++ b/black-tea.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ua">
+<html lang="en">
 
 <head>
     <title>Territoria Coffee</title>
@@ -20,7 +20,7 @@
                     <div class="header__body">
                         <div class="header__main">
                             <a href="index.html" class="logo">
-                                <img src="img/logo/logo.png">
+                                <img src="img/logo/Logo.png">
                             </a>
                             <div class="header__menu menu">
                                 <nav class="menu__body">
@@ -93,23 +93,25 @@
                     <h2 class="products__title _title">Чай чорний</h2>
                     <div class="products__items">
                         <article data-pid="1" class="products__item item-product">
-                            <div class="item-product__labels">
-                            </div>
-                            <a href="" class="item-product__image _ibg">
-                                <picture>
-                                    <source srcset="img/products/black-tea/chaj-chornij-granulovanij.webp" type="image/webp"><img
-                                        src="img/products/black-tea/chaj-chornij-granulovanij.webp" alt="Moonkin Hatchling">
-                                </picture>
-                            </a>
-                            <div class="item-product__body">
-                                <div class="item-product__content">
-                                    <h3 class="item-product__title">Чай чорний гранульований</h3>
-                                    <div class="item-product__text">Оптом і в роздріб</div>
+                                <div class="item-product__labels">
+                                    <div class="item-product__label item-product__label_sale">-10%</div>
+                                    <div class="item-product__label item-product__label_new">New</div>
                                 </div>
-                                <div class="item-product__prices">
-                                    <div class="item-product__price">299 грн/кг</div>
+                                <a href="" class="item-product__image _ibg">
+                                    <picture>
+                                        <source srcset="img/products/black-tea/chaj-chornij-granulovanij.webp" type="image/webp"><img
+                                            src="img/products/black-tea/chaj-chornij-granulovanij.webp" alt="Moonkin Hatchling">
+                                    </picture>
+                                </a>
+                                <div class="item-product__body">
+                                    <div class="item-product__content">
+                                        <h3 class="item-product__title">Чай чорний гранульований</h3>
+                                        <div class="item-product__text">Оптом і в роздріб</div>
+                                    </div>
+                                    <div class="item-product__prices">
+                                        <div class="item-product__price">299 грн/кг</div>
+                                    </div>
                                 </div>
-                                
                         </article>
                         <article data-pid="2" class="products__item item-product">
                             <div class="item-product__labels">
