--- a/index.html
+++ b/index.html
@@ -118,11 +118,9 @@
                                         <source srcset="img/avatar.webp" type="image/webp"><img src="img/avatar.jpg" alt="Avatar"></picture>
                                 </a>
                             
-                                    <button type="button" class="icon-menu">
-                                        <span></span>
-                                        <span></span>
-                                        <span></span>
-                                    </button>
+                                <button type="mobile-menu-btn" class="icon-menu mobile-menu">
+                                    <img src="/img/menu/ICON_GOLD.png" alt="Меню">
+                                </button>
                             
                         </div>
                     </div>
