--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                         <source srcset="img/avatar.webp" type="image/webp"><img src="img/avatar.jpg" alt="Avatar"></picture>
                                 </a>
                             
-                                <button type="mobile-menu-btn" class="icon-menu mobile-menu">
+                                <button type="button" class="icon-menu mobile-menu">
                                     <img src="/img/menu/ICON_GOLD.png" alt="Меню">
                                 </button>
                             
