--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                                 </a>
                             
                                 <button type="button" class="icon-menu mobile-menu">
-                                    <img src="/img/menu/ICON_GOLD.png" alt="Меню">
+                                    <img src="/img/menu/ICON_GOLD.webp" alt="Меню">
                                 </button>
                             
                         </div>
